public class Main{
    public static void main(String[] args) {
        Inicializador.inicializar(args);
    }
}