package backend;

public class Medico {
    private String username;
    private String password;

    public static String getUsername() {
        return username;
    }

    public static String getPassword() {
        return password;
    }
}
